--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE HTML>
-<!--
-	Helios 1.5 by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
-		<title>Helios by HTML5 UP</title>
+		<title>nickadamo.com</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="Nick Adamo's iOS Application Development Website" />
+		<meta name="keywords" content="Nick Adamo, Nick, Adamo, nickadamo.com, iOS Application Development, iOS App Dev, Objective-C, Objective C, iPhone Application Developer, iPhone App Developer" />
 		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" rel="stylesheet" type="text/css" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
@@ -47,11 +43,11 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li>
-								<span>Dropdown</span>
+								<span>About Me</span>
 								<ul>
-									<li><a href="#">Lorem ipsum dolor</a></li>
-									<li><a href="#">Magna phasellus</a></li>
-									<li><a href="#">Etiam dolore nisl</a></li>
+									<li><a href="#">About Me</a></li>
+									<li><a href="#">Skills</a></li>
+									<li><a href="#">Resumé</a></li>
 									<li>
 										<span>And a submenu &hellip;</span>
 										<ul>
@@ -64,9 +60,9 @@
 									<li><a href="#">Veroeros feugiat</a></li>
 								</ul>
 							</li>
-							<li><a href="left-sidebar.html">Left Sidebar</a></li>
+							<li><a href="left-sidebar.html">Projects</a></li>
 							<li><a href="right-sidebar.html">Right Sidebar</a></li>
-							<li><a href="no-sidebar.html">No Sidebar</a></li>
+							<li><a href="no-sidebar.html">Contact Me</a></li>
 						</ul>
 					</nav>
 
@@ -74,10 +70,9 @@
 			
 		<!-- Banner -->
 			<div id="banner">
-				<h2>Hi. You're looking at <strong>Helios</strong>.</h2>
+				<h2> <strong>Nick Adamo</strong>.</h2>
 				<span class="byline">
-					A (free) responsive site template by <a href="http://html5up.net/">HTML5 UP</a>.
-					Built on <a href="http://skeljs.org">skelJS</a> and released under the <a href="http://html5up.net/license/">CCA</a> license.
+					iOS Application Development
 				</span>
 			</div>
 
