--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 				<!-- Inner -->
 					<div class="inner">
 						<header>
-							<h1><a href="#" id="logo">Helios</a></h1>
+							<h1><a href="#" id="logo">Nick Adamo</a></h1>
 							<hr />
-							<span class="byline">Another fine freebie by HTML5 UP</span>
+							<span class="byline">iOS Application Development</span>
 						</header>
 						<footer>
-							<a href="#banner" class="button circled scrolly">Start</a>
+							<a href="#banner" class="button circled scrolly">Enter</a>
 						</footer>
 					</div>
 				
