--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			
 		<!-- Banner -->
 			<div id="banner">
-				<h2> <strong>Nick Adamo</strong>.</h2>
+				<h2> <strong>Nick Adamo</strong></h2>
 				<span class="byline">
 					iOS Application Development
 				</span>
