--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 									<li><a href="#">Veroeros feugiat</a></li>
 								</ul>
 							</li>
-							<li><a href="left-sidebar.html">Projects</a></li>
+							<li><a href="apps.html">Apps</a></li>
 							<li><a href="right-sidebar.html">Right Sidebar</a></li>
-							<li><a href="no-sidebar.html">Contact Me</a></li>
+							<li><a href="contactMe.html">Contact Me</a></li>
 						</ul>
 					</nav>
 
