--- a/apps.html
+++ b/apps.html
@@ -1,12 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-	Helios 1.5 by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
-		<title>Left Sidebar - Helios by HTML5 UP</title>
+		<title>Apps - by Nick Adamo</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -42,11 +38,11 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li>
-								<span>Dropdown</span>
+								<span>About Me</span>
 								<ul>
-									<li><a href="#">Lorem ipsum dolor</a></li>
-									<li><a href="#">Magna phasellus</a></li>
-									<li><a href="#">Etiam dolore nisl</a></li>
+									<li><a href="#">About Me</a></li>
+									<li><a href="#">Skills</a></li>
+									<li><a href="#">Resumé</a></li>
 									<li>
 										<span>And a submenu &hellip;</span>
 										<ul>
@@ -59,9 +55,9 @@
 									<li><a href="#">Veroeros feugiat</a></li>
 								</ul>
 							</li>
-							<li><a href="left-sidebar.html">Left Sidebar</a></li>
+							<li><a href="apps.html">Apps</a></li>
 							<li><a href="right-sidebar.html">Right Sidebar</a></li>
-							<li><a href="no-sidebar.html">No Sidebar</a></li>
+							<li><a href="contactMe.html">ContactMe</a></li>
 						</ul>
 					</nav>
 
