--- a/apps.html
+++ b/apps.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Apps - by Nick Adamo</title>
+		<title>Apps - Nick Adamo</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -57,7 +57,7 @@
 							</li>
 							<li><a href="apps.html">Apps</a></li>
 							<li><a href="right-sidebar.html">Right Sidebar</a></li>
-							<li><a href="contactMe.html">ContactMe</a></li>
+							<li><a href="contactMe.html">Contact Me</a></li>
 						</ul>
 					</nav>
 
@@ -72,12 +72,10 @@
 							<hr class="first" />
 							<section>
 								<header>
-									<h3><a href="#">Accumsan sed penatibus</a></h3>
+									<h3><a href="#">matchMe</a></h3>
 								</header>
 								<p>
-									Dolor sed fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis  tellus ante diam nec penatibus dolor cras
-									magna tempus feugiat veroeros.
+									matchMe is an flash card iOS application that is geared toward users looking to increase their vocabulary
 								</p>
 								<footer>
 									<a href="#" class="button">Learn More</a>
