--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
 		<!-- Header -->
 			<div id="header">
 				<span class="logo icon fa-paper-plane-o"></span>
-				<h1>Hi. This is Directive.</h1>
-				<p>A responsive HTML5 + CSS3 site template designed by <a href="http://html5up.net">HTML5 UP</a>
-				<br />
-				and released for free under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
+				<h1>Scott Shepard</h1>
+				<p>Atorney at Law</p>
+				<p>Licensed in Texas</p>
+
+
+
 			</div>
 
 		<!-- Main -->
 			<div id="main">
 
 				<header class="major container 75%">
-					<h2>We conduct experiments that
-					<br />
-					may or may not seriously
-					<br />
-					break the universe</h2>
+					<h2>Lawyering for humans, <br />
+by humans.<br />
+We treat our clients like people, not cases. To us, zealous representation means diligent preparation, creativity, <br />and an emphasis on efficiency. We’re lawyers who love to win, but measure victory by the demands and <br />expectations of our clients’ lives.<br /></h2>
 					<!--
 					<p>Tellus erat mauris ipsum fermentum<br />
 					etiam vivamus nunc nibh morbi.</p>
@@ -49,24 +49,24 @@
 
 				<div class="box alt container">
 					<section class="feature left">
-						<a href="#" class="image icon fa-signal"><img src="images/pic01.jpg" alt="" /></a>
+						<a href="#" class="image icon fa-signal"><img src="images/scott.jpg" alt="" /></a>
 						<div class="content">
-							<h3>The First Thing</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<h3>About</h3>
+							<p> Scott Shepard began his career as a cost analyst for a FORTUNE 100 manufacturing company and learned the intricacies of large organizations through his work in corporate accounting and finance.</p>
 						</div>
 					</section>
 					<section class="feature right">
 						<a href="#" class="image icon fa-code"><img src="images/pic02.jpg" alt="" /></a>
 						<div class="content">
-							<h3>The Second Thing</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<h3>Entertainment Law </h3>
+							<p>Our attorneys blend expertise in copyright and trademark law, transactional negotiations, privacy and publicity rights, production and licensing agreements, with experience in film, music, television, theater, publishing and advertising. The result is effective legal representation for clients on both the creative and business side of the industry, which allows our clients to focus more of their time on what they do best.</p>
 						</div>
 					</section>
 					<section class="feature left">
 						<a href="#" class="image icon fa-mobile"><img src="images/pic03.jpg" alt="" /></a>
 						<div class="content">
-							<h3>The Third Thing</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<h3>Business</h3>
+							<p>Businesses, whether large or small, established or just starting up, need business-savvy attorneys who can help grow and protect their livelihood. We aim to understand our clients’ needs and goals in order to further their success and growth, while anticipating and protecting our clients from issues that may arise in the future, even beyond traditional risk management. Our legal solutions help to ensure efficiency, achieve goals and protect profitability..</p>
 						</div>
 					</section>
 				</div>
@@ -221,10 +221,10 @@
 				-->
 
 				<footer class="major container 75%">
-					<h3>Get shady with science</h3>
-					<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p>
+					<h3>Litigation</h3>
+					<p>We represent our clients in formal litigation and dispute resolution, backed by aggressive, high-caliber advocacy. We work to establish a thoughtful endgame, and zealously represent our clients’ interests, while avoiding unnecessary litigation. As trial attorneys we enjoy the challenge of the courtroom. Our approach to civil litigation, whether common or complex, is built on focused preparation, non-linear thinking and efficient strategies..</p>
 					<ul class="actions">
-						<li><a href="#" class="button">Join our crew</a></li>
+						<li><a href="#" class="button">Request a Consultation</a></li>
 					</ul>
 				</footer>
 
@@ -238,8 +238,7 @@
 						<h2>Questions or comments?</h2>
 					</header>
 
-					<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor
-					orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p>
+					<p>Please feel free to reach out for any inquiries or chocolate chip cookie recipes!</p>
 
 					<form method="post" action="#">
 						<div class="row">
